doc/v2.0/_sources/reference/generated/ak.linear_fit.rst.txt
ak.linear_fit
-------------

.. py:module: ak.linear_fit

Defined in `awkward.operations.ak_linear_fit <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_linear_fit.py>`__ on `line 12 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_linear_fit.py#L12>`__.

.. py:function:: ak.linear_fit(x, y, weight=None, axis=None, *, keepdims=False, mask_identity=False, flatten_records=unset)


    :param x: One coordinate to use in the linear fit (anything :py:obj:`ak.to_layout` recognizes).
    :param y: The other coordinate to use in the linear fit (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` and ``y`` to give each point
               a weight. Weighting points equally is the same as no weights;
               weighting some points higher increases the significance of those
               points. Weights can be zero or negative.
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool
    :param flatten_records: If True, axis=None combines fields from
                        different records; otherwise, records raise an error.
    :type flatten_records: bool

Computes the linear fit of ``y`` with respect to ``x`` (many types supported,
including all Awkward Arrays and Records, must be broadcastable to each
other). The grouping is performed the same way as for reducers, though
this operation is not a reducer and has no identity.

This function has no NumPy equivalent.

Passing all arguments to the reducers, the linear fit is calculated as

.. code-block:: python


    sumw            = ak.sum(weight)
    sumwx           = ak.sum(weight * x)
    sumwy           = ak.sum(weight * y)
    sumwxx          = ak.sum(weight * x**2)
    sumwxy          = ak.sum(weight * x * y)
    delta           = (sumw*sumwxx) - (sumwx*sumwx)

    intercept       = ((sumwxx*sumwy) - (sumwx*sumwxy)) / delta
    slope           = ((sumw*sumwxy) - (sumwx*sumwy))   / delta
    intercept_error = np.sqrt(sumwxx / delta)
    slope_error     = np.sqrt(sumw   / delta)

The results, ``intercept``, ``slope``, ``intercept_error``, and ``slope_error``,
are given as an :py:obj:`ak.Record` with four fields. The values of these fields
might be arrays or even nested arrays; they match the structure of ``x`` and
``y``.

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

